--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Base.Theme.SocialMediaApp"
         tools:targetApi="35">
         <activity
+            android:name=".ui.acitivity.PostActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.acitivity.SearchActivity"
             android:exported="false" />
         <activity
