--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
         android:name=".other.MyApplication"
         android:allowBackup="true"
@@ -17,6 +21,16 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <!-- Required for Google Sign-In -->
+        <meta-data
+            android:name="com.google.android.gms.auth.api.signin"
+            android:value="true" />
+
+        <!-- Firebase Authentication App ID -->
+        <meta-data
+            android:name="com.google.firebase.database.application.id"
+            android:value="@string/google_app_id" />
 
         <activity
             android:name=".ui.acitivity.PostActivity"
